Made changes to the tester file to save videos to newly created 'video' directory. Also, added these videos to github

--- a/cart_pole_tester.ipynb
+++ b/cart_pole_tester.ipynb
@@ -36,6 +36,8 @@
     "ENV_NAME = 'CartPole-v1'\n",
     "\n",
     "env = gym.make(ENV_NAME)\n",
+    "env = gym.wrappers.Monitor(env, './video/',video_callable=lambda episode_id: True,force = True)\n",
+    "\n",
     "obs_space_shape = env.observation_space.shape\n",
     "nb_actions = env.action_space.n"
    ]
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -105,10 +107,10 @@
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1fa3dd75278>"
+       "<keras.callbacks.History at 0x2d0e8186d30>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
